JWebLite Change Log

Version 0.6.0
====================
．Add LineWriterListener
．Add WebContext
．Move JWebLitePage package into jweblite.web.page
．Minor changes
．Minor bug fixes

Version 0.5.1
====================
．Add doError for Application
．Add FormModel
．Merge StringUtils.tld into StringELUtils.tld
．Rename ContextPath to JwlCP
．Minor bug fixes

Version 0.5.0
====================
．Remove parameter: UrlPathPadding
．Change parameter: ErrorPage
．Improved performance
．Add WebUtils
．Add getLongValue
．Minor changes

Version 0.4.3
====================
．Move IncludeTag into JwlPageUtils.tld
．Fix bug for parsing servlet path
．Minor changes

Version 0.4.2
====================
．JDK1.5
．Minor changes

Version 0.4.1
====================
．Add IncludeTag
．Add AlternatingTag
．Minor changes
．Minor bug fixes

Version 0.4.0
====================
．Add CornerTag
．Add ChainedComboBoxTag
．Add GZipEnabled
．Add ErrorPage
．Add JsonUtils
．Add IOUtils
．Minor changes

Version 0.3.2
====================
．Improved performance
．Minor changes
．Minor bug fixes

Version 0.3.1
====================
．Add JWebLiteRequestDispatcher
．More event trigger support
．Minor changes

Version 0.3.0
====================
．Add JWebLiteApplication
．Add JWebLiteSessionFactory
．Add RequestELUtils
．Add DateELUtils
．Minor changes

Version 0.2.3
====================
．Add WebResource
．Add CaptchaImage
．Add PropertiesUtils

Version 0.2.2
====================
．Add PagingTag
．Add support for Tomcat5
．Minor changes

Version 0.2.1
====================
．Add JWebLiteMultipartRequestWrapper
．Add MultiValueMap
．Minor changes
．Minor bug fixes

Version 0.2.0
====================
．More EL function support
．Add UrlPathPadding
．Minor changes

Version 0.1.6
====================
．Add DataProvider
．Add CollectionDataProvider
．Minor bug fixes

Version 0.1.5
====================
．Add LoopIterator
．Add CollectionUtils

Version 0.1.4
====================
．Minor changes

Version 0.1.3
====================
．Add support for servlet